# pydantic-ai-exploration

./: README.md  main.py  pyproject.toml
examples/: README.md
notebooks/: 01 - Basic Agent Concepts.ipynb  02 - Core Concepts.ipynb
