[project]
name = "pydantic-ai-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "pip>=25.3",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.9.1",
    "rich>=14.2.0",
]
